# argscape

./: .cursorignore  .dockerignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  setup.cfg
.github/workflows/: release.yml
argscape/: __init__.py  cli.py
argscape.egg-info/: PKG-INFO  SOURCES.txt
argscape/backend/: Dockerfile  env.example  environment.yml  location_inference.py  main.py  midpoint_inference.py  requirements-web.txt  session_storage.py  sparg_inference.py  temporal_inference.py  (+2 more)
backend/: Dockerfile  dev_storage_override.py  environment-local.yml  environment.yml  geographic_utils.py  graph_utils.py  location_inference.py  main.py  midpoint_inference.py  pyinstaller.py  pyproject.toml  requirements-web.txt  session_storage.py  setup.py  sparg_inference.py  spatial_generation.py  startup.py  test_simulation.py
demo/: arg_examples.py  demo.py  scenario1_panmixia.trees  scenario1_panmixia_lowNe.trees  scenario1_structure.trees  scenario1_structure_lowNe.trees  scenario2_structure_no_admixture.trees  scenario2_structure_no_admixture_lowNe.trees  scenario2_with_admixture.trees  scenario2_with_admixture_lowNe.trees  scenario3_high_Ne.trees  scenario3_low_Ne.trees
frontend/: Dockerfile  env.example  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: build-desktop.sh  build-railway.sh  build-with-backend.sh  bundle-backend.py  dev-local.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+98 files in other folders)
