[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argscape"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "ARGscape backend package"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["argscape*"]
namespaces = true
